<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="heading">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="capstone_project">Capstone:My own app</string>
</resources>
